[project]
name = "ctrob-timelapse"
version = "1.0.0"
description = "Organizador de fotos timelapse de cartão SD"
requires-python = ">=3.10"
dependencies = [
    "PyQt5>=5.15",
    "Pillow>=10.0",
    "easyocr>=1.7",
]

[project.optional-dependencies]
tesseract = ["pytesseract>=0.3"]

[project.scripts]
ctrob-timelapse = "main:main"
